public interface AllGames {

    public void startGame();

    public void stopGame();

    public void chooseBet();

    public void calculatePrizeMoney();

    public void newRound();

}
