@startuml

Main *-- ProgramControl
ProgramControl *-- MainMenu
ProgramControl *-- User
ProgramControl *-- DatabaseIO
MainMenu *-- AllGames
AllGames <|-- CardGames
CardGames *-- CardDeck
CardDeck *-- Card
AllGames <|-- DiceGames
Dice <|-- DiceGames
AllGames <|-- MiscGames
DiceGames <|-- Craps
MiscGames <|-- Roulette
CardGames <|-- BlackJack
Roulette *-- RouletteWheel
RouletteWheel *-- Roulettefields

class Main
class User{

- int userID
- String userName
- String password
- int balance

+ int makeBet(int betSize)
+ int receiveMoney(int money)
+ constructor(int userID, String userName, String password, int balance)

}
class MainMenu{

+ login()
+ logOut()
+ seeUserBalance()
+ chooseGame()

}
class ProgramControl{

+ static User currentUser
+ Array<String>allGames
+ runCasino()



}

interface AllGames{

+ startGame()
+ StopGame()
+ chooseBet()
+ calculatePrizeMoney()
+ newRound()

}

Abstract class CardGames{

- boolean hasWon
- String name
- CardDeck currentDeck
+ constructor(boolean hasWon, String name)

}

class CardDeck{

- ArrayList<Card>cards
- ArrayList<Card>usedCards
- int cardAmount

+ shuffleCards()
+ drawFirstCard()
+ addUsedCards()
+ constructor(ArrayList<Card>cards, int cardAmount)

}

class Card{

- String name
- String suits
- int value

+ constructor(String name, String suits, int value)
+ get(name, suits, value)

}

interface Dice{
+ int rollDie()

}

Abstract Class DiceGames{
- Boolean hasWon
- ArrayList<Dice> numberOfDice
# int rollDie()

}

Class Craps{


}

Class Roulette{


}

Class BlackJack{


}

Abstract Class MiscGames{
- Boolean hasWon
- String name

}

class DatabaseIO{

+ loadUserData()
+ createNewUser()
+ updateUserBalance()

}

class RouletteWheel{
- int value
- String color
- ArrayList<String> wheelData
+ void Wheel()
+ int getvalue()
+ String getcolor()
+ ArrayList<String> readWheelData()

}

class Roulettefields{
- int ID
- int value
- int color
- boolean even

+ Roulettefields()

}


@enduml